<resources xmlns:xliff="http://schemas.android.com/tools">
  <string name="app_name">Stock Hawk</string>
  <string name="action_example">Example action</string>
  <string name="action_settings">Settings</string>
  <string name="action_change_units">Change Units</string>
  <string name="network_toast">Uh-oh! This app requires an internet connection</string>

  <string name="stock_exists">"This stock is already saved!"</string>

  <!--Resource strings for Symbol Search Dialog-->
  <string name="symbol_search_title">Symbol Search</string>
  <string name="symbol_dialog">Search for a Stock Symbol</string>
  <string name="symbol_add">Add</string>
  <string name="symbol_cancel">Cancel</string>
  <string name="symbol_hint">FB</string>
  <string name="symbol_prefill"></string>

  <!--Resource strings for detail_extras_grid item titles-->
  <string name="prevClose">Prev Close</string>
  <string name="dayLow">Day Low</string>
  <string name="yearLow">Year Low</string>
  <string name="open">Open</string>
  <string name="dayHigh">Day High</string>
  <string name="yearHigh">Year High</string>
  <string name="format_change_bid_display"><xliff:g id="Change">%1$s</xliff:g> (<xliff:g id="ChangePercent">%2$s</xliff:g>)</string>
  <string name="format_symbol_display">NASDAQ: <xliff:g id="Symbol">%1$s</xliff:g></string>

  <string name="empty_stock_list">No Stock Data Available</string>
  <string name="timed_out">Timed out!</string>
  <string name="symbol_not_found">Symbol not found!</string>
  <string name="add_new_stock">Add a new stock</string>
</resources>
